log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-logs
          emptyDir: {}
        - name: config
          configMap:
            name: log-output-configmap
      containers:
        - name: log-output-writer
          image: log-output-writer
          volumeMounts:
            - name: shared-logs
              mountPath: /app/files
        - name: log-output-reader
          image: log-output-reader
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
          volumeMounts:
            - name: shared-logs
              mountPath: /app/files
              readOnly: true
            - name: config
              mountPath: /app/config
              readOnly: true
