log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output
  namespace: exercises
spec:
  selector:
    app: log-output
  ports:
    - port: 1234
      targetPort: 3000
