log_output/manifests/greeter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v1
  template:
    metadata:
      labels:
        app: greeter
        version: v1
    spec:
      containers:
        - name: greeter
          image: greeter
          readinessProbe:
            httpGet:
              path: /
              port: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v2
  template:
    metadata:
      labels:
        app: greeter
        version: v2
    spec:
      containers:
        - name: greeter
          image: greeter
          readinessProbe:
            httpGet:
              path: /
              port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc
  labels:
    istio.io/use-waypoint: waypoint
spec:
  selector:
    app: greeter
  ports:
    - name: http
      port: 4567
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-1
spec:
  selector:
    app: greeter
    version: v1
  ports:
    - name: http
      port: 4567
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-2
spec:
  selector:
    app: greeter
    version: v2
  ports:
    - name: http
      port: 4567
      targetPort: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: greeter-split
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: greeter-svc
      port: 4567
  rules:
    - backendRefs:
        - name: greeter-svc-1
          port: 4567
          weight: 75
        - name: greeter-svc-2
          port: 4567
          weight: 25
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: waypoint
  labels:
    istio.io/waypoint-for: service
spec:
  gatewayClassName: istio-waypoint
  listeners:
    - name: mesh
      port: 15008
      protocol: HBONE
