log_output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: log-output.localhost
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: log-output
              port:
                number: 1234
